# rsgeo

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  example_benchmark.ipynb  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build-test.yaml  create-py-release-test.yaml
benches/: bench.rs
coregeos/: Cargo.toml
coregeos/benches/: bench.rs
coregeos/src/: core.rs
notebooks/: example_benchmark.ipynb
rsgeo-core/: Cargo.toml
rsgeo-core/benches/: bench.rs
rsgeo-core/src/: functions.rs  lib.rs
rsgeo-py/: Cargo.toml  Makefile
rsgeo-py/notebooks/: example_benchmark_contains.ipynb
rsgeo-py/rsgeo/: __init__.py  geometry.py  pandas_extension.py
rsgeo-py/src/: lib.rs
rsgeo-py/tests/: conftest.py  test_geometries.py  test_geometry.py  test_pandas_extension.py  test_rsgeo.py
rsgeo-py/tests/geometry/: test_geometries.py
rustgeos/: Cargo.toml  Makefile  __init__.py  tasks.sh
rustgeos/rustgeos/algorithm/: __init__.py
rustgeos/rustgeos/geometry/: __init__.py  geometries.py
rustgeos/src/: lib.rs
rustgeos/tests/: conftest.py
rustgeos/tests/algorithm/: test_algorithms.py
rustgeos/tests/geometry/: test_geometries.py
src/: core.rs  lib.rs
tests/: test_rustgeos.py
