[package]
name = "rustgeos"
version = "0.1.0"
authors = ["Yu Ri Tan"]
edition = "2018"

[lib]
name = "rustgeos"
crate-type = ["cdylib"]

[dependencies]
geo = "0.15.0"
numpy = "0.12.1"
ndarray = ">= 0.13"
itertools = "0.9.0"
bencher = "0.1.5"
rand = "0.7.3"
ndarray-linalg = { version = "0.12", features = ["openblas"] }

[dependencies.pyo3]
version = "0.12"
features = ["extension-module"]
